
        * Fix gl engine vsync option pass-in in elm_win
        * Fix elm_progressbar_pulse() to abort if pulsing not enabled

2013-02-21  Jaehwan Kim

        * Fix scroller acceleration bug. It was accelerated even it's scrolled
        after finishing the previous scroll. This happens with page scroll enabled.

2013-03-02  Brian J. Lovin

        * Fix initial value of the spinner on the first mouse move.

2013-03-11  Tom Hacohen (TAsn)

	* Entry: Fixed a bug with text appending.

2013-03-13  WooHyun Jung

        * List : Focus_next should be executed only when access mode is enabled.

2013-03-13  Tae-Hwan Kim (bluezery)

        * Fix a memory leak in elm_genlist. Return value of elm_genlist_realized_items_get should be freed

2013-03-18  WooHyun Jung

        * Focus highlight should be reconfigured when theme is changed.

2013-03-19  Jaehwan Kim

        * Fix the elm_shutdown bug in _elm_shutdown_config.
        When the elm_shutdown is used after elm_config_all_flush, the segment fault occur.
        It's why it uses ecore_x in _prop_all_update_cb after removing it.

2013-03-27  Mike Blumenkrantz

        * fix ctxpopup geometry when parent is an elm_win

2013-04-04  Rafael Antognolli

        * 1.7.6 release

2013-04-08  Jaehwan Kim

        * Quit the scroll animator if the scroller don't have a bounce and reach a edge.

2013-04-08  Jaehwan Kim

        * Fix the scroller show by a page if the page size is set and the region_bring_in or region_show is called.

2013-04-08  Rafael Antognolli

        * Fix layout_example_02.
        * Fix hoversel_example_01.

2013-04-09  WooHyun Jung

        * When ctxpopup includes elm_list, elm_list should get focus when ctxpopup is shown.

2013-06-10  Stefan Schmidt

        * Fix potential free'ed memory dereference in naviframe

2013-06-11  Daniel Willmann
        * Make elm_tooltip more robust if not run inside X

2013-06-13  Rafael Antognolli
        * Get the framespace from the theme.